# JuMPy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
src/jumpy/: __init__.py  backend.py  bridge_juliacall.py  expressions.py  iterators.py  model.py  serialize.py
tests/: test_expressions.py  test_solve.py
