[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jumpy"
version = "0.1.0"
description = "A Python interface to JuMP's MathOptInterface via GeneratorOptInterface"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jumpy"]
