[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jumpy"
version = "0.1.0"
description = "A Python interface to JuMP's MathOptInterface via GeneratorOptInterface"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
juliacall = ["juliacall>=0.9.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/jumpy"]
